<resources>
    <string name="app_name">File_Attente</string>
    <string name="bienvenue_sur_notre_file_d_attente">Bienvenue sur notre File d\'Attente !</string>
    <string name="j_ai_besoin_d_un_conseil">J\'ai besoin d\'un conseil</string>
    <string name="je_viens_avec_une_ordonnance">Je viens avec une ordonnance</string>
    <string name="choix_de_la_langue">Choix de La Langue :</string>
    <string name="page_ordonnance">Page Ordonnance</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="red_marrer">Redémarrer :</string>
    <string name="j_accepte_que_mon_image_soit_utilis_temporairement_et_associ_mon_num_ro_dans_la_file_d_attente">J\'accepte que mon image soit utilisé temporairement et associé à mon numéro dans la file d\'attente</string>
    <string name="je_ne_souhaite_pas_que_mon_image_soit_utilis_je_pr_f_re_saisir_un_pseudo_ou_mon_nom">Je ne souhaite pas que mon image soit utilisé. Je préfère saisir un pseudo ou mon nom.</string>
    <string name="page_conseil">Page Conseil</string>
    <string name="inscrivez_votre_nom_qui_sera_associ_votre_num_ro_de_file_d_attente">Inscrivez votre nom qui sera associé à votre numéro de file d\'attente</string>
    <string name="valider">Valider</string>
    <string name="fin">Fin</string>
    <string name="nom">Nom</string>
    <string name="capture_image">Capture Image</string>
    <string name="no_account_yet_create_one">No Account yet? create One</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="welcome_on_your_application">Welcome on Your Application !</string>
    <string name="guest">Guest</string>
</resources>