<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/button1"
        android:layout_marginBottom="50dp"
        android:text="@string/bienvenue_sur_notre_file_d_attente"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_PairUnPair"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="5dp"
        android:onClick="conseil"
        android:text="@string/j_ai_besoin_d_un_conseil"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_PairUnPair"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="50dp"
        android:onClick="ordonnance"
        android:text="@string/je_viens_avec_une_ordonnance"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_PairUnPair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="PAIR" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/images"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/btn_PairUnPair"
        android:layout_height="wrap_content"
        android:text="IMAGES" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_below="@id/images"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:text="NOMBRE" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombre"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:onClick="lang"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />


</RelativeLayout>